--- a/Electrical.html
+++ b/Electrical.html
@@ -9,7 +9,7 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-
+        <link rel="icon" type="image/x-icon" href="./Hero/logo-removebg-preview.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
         integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -24,7 +24,7 @@
 
             <div class="flex-grow-1">
                 <a class="navbar-brand" href="./index.html">
-                    <img src="./Hero/logo-removebg-preview.png" width="50px" alt="">
+                    <!-- <img src="./Hero/logo-removebg-preview.png" width="50px" alt=""> -->
                     <img src="./Hero/ENNOVAlogo.png" width="130px"></a>
             </div>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -54,7 +54,8 @@
                     <li class="nav-item">
                         <a class="nav-link" href="./Contact.html">Contact Us</a>
                     </li>
-                    <li><a href="tel:+917972911543" class="fw-bold m-1 btn btn-primary text-light">Call Now</a></li>
+                    <li><a href="tel:+917972911543" class="fw-bold m-1 btn btn-primary text-light callnowbtn">Call Now</a></li>
+                    <li><a href="tel:+917972911543" class="fw-bold m-1 btn btn-primary text-light getaquotebtn">Get A Quote</a></li>
                 </ul>
             </div>
         </div>
@@ -67,7 +68,7 @@
         <section id="itimghideandview" class="marandpadingpanel">
             <div class="container">
                 <h2 class=" fw-bold ">Panel design</h2>
-                <p class="">We specialize in electrical control Panel Design, SLDA, GA and wiring diagram services. Our
+                <p class="">We specialize in electrical control Panel Design, SLDA, GA and wiring Diagram Services. Our
                     expertise ensures precision and reliability in every project. Trust us to tailor solutions to your
                     needs, ensuring efficiency and excellence in electrical design.</p>
                 <button type="button" class="btn btn-secondary mb-1 ">Get A Quote</button>
@@ -86,7 +87,7 @@
                                 <h3 class="fs-3 mt-3 fw-bold">CONTROL WIRING DIAGRAM</h3>
 
                                 <p class="panelfontdiv">Discover precision and clarity in our Electrical Wiring
-                                    Diagrams—your key to
+                                    Diagrams your key to
                                     understanding and accuracy. We expertly create motor feeder drawings, from classic
                                     DOL
                                     to advanced VFD, covering both conventional and intelligent controls. Explore
@@ -109,7 +110,7 @@
                                     equipment details and more. We customize based on your needs, site space and bus
                                     duct
                                     locations. Whether it's LV or MV switchboards like PCC, MCC, PMCC or specialized
-                                    panels. we've got all Aspects covered. Simplify your project—share your BOQ, feeder list
+                                    panels. We've got all aspects covered. Simplify your project share your BOQ, feeder list
                                     and
                                     Tentative GA for guaranteed success.</p>
                             </div>
@@ -154,13 +155,13 @@
                         <img class="img-fluid " src="./Diagram/BOM_ELECTRICAL.png" alt="">
                     </div>
                     <p>Craft the foundation of your projects with our expertise in precise panel specifications and a
-                        comprehensive Bill of Material (BOM). Our detailed BOM serves as a clear scope of supply,
+                        comprehensive Bill Of Material (BOM). Our detailed BOM serves as a clear scope of supply,
                         providing
                         complete descriptions, catalog numbers and component designations aligned with the scheme. This
                         ensures accurate and thorough information, simplifying the component ordering process for your
                         purchase department. Additionally, our tailored panel specifications guarantee optimal
                         performance
-                        and scalability for your specific requirements. For a detailed BOM and panel specifications, We
+                        and scalability for your specific requirements. For a detailed BOM and panel specifications, we
                         require the final General Arrangement (GA) scheme and a list specifying the make of
                         components.
                         Trust us for meticulous BOM creation and panel specification that streamline your procurement
@@ -190,11 +191,11 @@
                     <div class="d-flex justify-content-center secitsolutionimgdiv ">
                         <img class="img-fluid " src="./Diagram/EARTHING.jpeg" alt="">
                     </div>
-                    <p>Delivering comprehensive solutions, We specialize in providing precise earthing and lightning
+                    <p>Delivering comprehensive solutions, we specialize in providing precise earthing and lightning
                         layouts. Our expertise ensures a meticulous approach to integrate these vital elements
                         seamlessly
-                        into your overall project design, meeting safety standards, and enhancing both functionality and
-                        visual appeal. Count on us for reliable and efficient earthing and lighting layouts tailored to
+                        into your overall project design, meeting safety standards and enhancing both functionality and
+                        visual appeal. Count on us for reliable, efficient earthing and lighting layouts tailored to
                         elevate your project's success.
                     </p>
                     <button type="button" class="btn btn-secondary mb-3">Get A Quote</button>
@@ -223,7 +224,7 @@
                         identification and classification to detailed specifications, ensuring optimal efficiency and
                         adherence to industry standards. With expertise in assessing cable quantities, planning
                         efficient
-                        routing and defining connection points and termination details, We provide a seamless and
+                        routing and defining connection points and termination details, we provide a seamless and
                         precision-driven approach. Our cable scheduling services extend beyond isolated design,
                         integrating
                         seamlessly with other engineering systems for a holistic and well-coordinated solution.
@@ -347,11 +348,11 @@
                 <div class="col-lg-1 "></div>
 
                 <div id="itdiviot" class="col-lg-5 col-md-6">
-                    <h2 class=" fw-bold ">Design abd Manufacturing of PLC Panels</h2>
+                    <h2 class=" fw-bold ">Design and Manufacturing of PLC Panels</h2>
                     <div class="d-flex justify-content-center secitsolutionimgdiv ">
                         <img class="img-fluid " src="./panel/PLC.png" alt="">
                     </div>
-                    <p>Our PCC panels are engineered for efficient and secure power distribution,
+                    <p>Our PLC panels are engineered for efficient and secure power distribution,
                         incorporating advanced features for monitoring and control. With PLC based Panels HMI/MMI are
                         provided to provide the operator various messages and controls of the process plants touch
                         screen
