--- a/IT.html
+++ b/IT.html
@@ -8,7 +8,7 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-
+        <link rel="icon" type="image/x-icon" href="./Hero/logo-removebg-preview.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
         integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -22,7 +22,7 @@
 
             <div class="flex-grow-1">
                 <a class="navbar-brand" href="./index.html">
-                    <img src="./Hero/logo-removebg-preview.png" width="50px" alt="">
+                    <!-- <img src="./Hero/logo-removebg-preview.png" width="50px" alt=""> -->
                     <img src="./Hero/ENNOVAlogo.png" width="130px"></a>
             </div>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -52,7 +52,8 @@
                     <li class="nav-item">
                         <a class="nav-link" href="./Contact.html">Contact Us</a>
                     </li>
-                    <li><a href="tel:+917972911543" class="fw-bold m-1 btn btn-primary text-light">Call Now</a></li>
+                    <li><a href="tel:+917972911543" class="fw-bold m-1 btn btn-primary text-light callnowbtn">Call Now</a></li>
+                    <li><a href="tel:+917972911543" class="fw-bold m-1 btn btn-primary text-light getaquotebtn">Get A Quote</a></li>
                 </ul>
             </div>
         </div>
@@ -345,11 +346,9 @@
                                             alt=""></a>
 
                                 </div>
-                                <h3 class="fs-4 mt-3 fw-bold">IOT App development</h3>
+                                <h3 class="fs-4 mt-3 fw-bold">IOT App Development</h3>
 
-                                <p>Our team of seasoned developers crafts visually stunning and
-                                    user friendly websites,
-                                    custom-tailored to your brand and business objectives.</p>
+                                <p>Turn your IoT concepts into reality with our custom app development. Our team creates intuitive apps for device control, data visualization and analytics, tailored to your needs from start to finish.</p>
                             </div>
                         </div>
 
@@ -361,10 +360,7 @@
                                 </div>
                                 <h3 class="fs-4 mt-3 fw-bold">IOT Cloud Connectivity</h3>
 
-                                <p>We specialize in customer-centric software development,
-                                    creating solutions tailored to your unique requirements. Elevate your business with
-                                    our
-                                    bespoke software services.</p>
+                                <p>Connect your devices effortlessly to the cloud with our IoT cloud connectivity solutions. Access real-time data exchange, remote monitoring and advanced analytics.</p>
                             </div>
                         </div>
 
@@ -401,7 +397,7 @@
                 </div>
 
                 <div class="col-lg-5 col-md-6">
-                    <h2 class="fw-bold">DATA ANALYTICS</h2>
+                    <h2 class="fw-bold">DATA ANALYSIS</h2>
                     <div class="d-flex justify-content-center secitsolutionimgdiv ">
                         <img class="img-fluid " src="./it solution/business-data-analysis.jpg" alt="">
                     </div>
@@ -436,7 +432,7 @@
             <!-- <div class="col-md-1"></div> -->
             <div class="col-md-12 col-lg-4">
                 <a href="./index.html"><img src="./Hero/ENNOVAlogo.png" class="contactimgeno" alt=""></a>
-                <p>At Ennova Technology, we specialize in creating innovative solutions for businesses. From designing electronics to developing websites, software and application. we offer a wide range of services to help businesses succeed. We also provide cutting-edge IoT solutions for industrial automation, making processes more efficient and effective. Our goal is to use technology to solve problems and drive growth for our clients.</p>
+                <p>At Ennova Technology, we specialize in creating innovative solutions for businesses. From designing electronics to developing websites, software and application. We offer a wide range of services to help businesses succeed. We also provide cutting-edge IoT solutions for industrial automation, making processes more efficient and effective. Our goal is to use technology to solve problems and drive growth for our clients.</p>
             </div>
             <!-- <div class="col-md-1"></div> -->
             <div class="  col-lg-1"></div>
