--- a/Contact.html
+++ b/Contact.html
@@ -8,7 +8,7 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-
+        <link rel="icon" type="image/x-icon" href="./Hero/logo-removebg-preview.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
         integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -24,7 +24,7 @@
 
             <div class="flex-grow-1">
                 <a class="navbar-brand" href="./index.html">
-                    <img src="./Hero/logo-removebg-preview.png" width="50px" alt="">
+                    <!-- <img src="./Hero/logo-removebg-preview.png" width="50px" alt=""> -->
                     <img src="./Hero/ENNOVAlogo.png" width="130px"></a>
             </div>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -54,7 +54,8 @@
                     <li class="nav-item">
                         <a class="nav-link" href="./Contact.html">Contact Us</a>
                     </li>
-                    <li><a href="tel:+917972911543" class="fw-bold m-1 btn btn-primary text-light">Call Now</a></li>
+                    <li><a href="tel:+917972911543" class="fw-bold m-1 btn btn-primary text-light callnowbtn">Call Now</a></li>
+                    <li><a href="tel:+917972911543" class="fw-bold m-1 btn btn-primary text-light getaquotebtn">Get A Quote</a></li>
                 </ul>
             </div>
         </div>
@@ -68,8 +69,8 @@
             allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </div>
 
-    <div class="row container-fluid ">
-        <div class="col-lg-1"></div>
+    <div class="row container-fluid  d-flex justify-content-evenly ">
+        <!-- <div class="col-lg-1"></div> -->
         <div class="col-lg-5 col-md-6 ">
             <form class="form">
                 <h2>User Profile</h2>
@@ -101,7 +102,7 @@
                 </div>
 
                 <div class="form-group">
-                    <label for="email">Specilization:</label>
+                    <label for="email">Specialization:</label>
                     <div class="relative">
                         <input class="form-control" type="text" id="tags" required=""
                             placeholder="Type your specialization...">
@@ -111,7 +112,7 @@
 
 
                 <div class="tright">
-                    <a href=""><button class="movebtn movebtnre" type="Reset"><i class="fa fa-fw fa-refresh"></i> Reset
+                    <a href=""><button class="movebtn movebtnsu" type="Reset"><i class="fa fa-fw fa-refresh"></i> Reset
                         </button></a>
                     <a href=""><button class="movebtn movebtnsu" type="Submit">Submit <i
                                 class="fa fa-fw fa-paper-plane"></i></button></a>
@@ -163,7 +164,7 @@
 
             </div>
         </div>
-        <div class="col-lg-1"></div>
+        <!-- <div class="col-lg-1"></div> -->
     </div>
 
 
@@ -174,7 +175,7 @@
             <div class="col-md-12 col-lg-4">
                 <a href="./index.html"><img src="./Hero/ENNOVAlogo.png" class="contactimgeno" alt=""></a>
                 <p>At Ennova Technology, we specialize in creating innovative solutions for businesses. From designing
-                    electronics to developing websites, software and application. we offer a wide range of services to help
+                    electronics to developing websites, software and application. We offer a wide range of services to help
                     businesses succeed. We also provide cutting-edge IoT solutions for industrial automation, making
                     processes more efficient and effective. Our goal is to use technology to solve problems and drive
                     growth for our clients.</p>
