--- a/Embedded.html
+++ b/Embedded.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
         integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-
+        <link rel="icon" type="image/x-icon" href="./Hero/logo-removebg-preview.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
@@ -30,7 +30,7 @@
 
             <div class="flex-grow-1">
                 <a class="navbar-brand" href="./index.html">
-                    <img src="./Hero/logo-removebg-preview.png" width="50px" alt="">
+                    <!-- <img src="./Hero/logo-removebg-preview.png" width="50px" alt=""> -->
                     <img src="./Hero/ENNOVAlogo.png" width="130px"></a>
             </div>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -60,7 +60,8 @@
                     <li class="nav-item">
                         <a class="nav-link" href="./Contact.html">Contact Us</a>
                     </li>
-                    <li><a href="tel:+917972911543" class="fw-bold m-1 btn btn-primary text-light">Call Now</a></li>
+                    <li><a href="tel:+917972911543" class="fw-bold m-1 btn btn-primary text-light callnowbtn">Call Now</a></li>
+                    <li><a href="tel:+917972911543" class="fw-bold m-1 btn btn-primary text-light getaquotebtn">Get A Quote</a></li>
                 </ul>
             </div>
         </div>
@@ -71,7 +72,7 @@
 
     <div id="Embedded_Hard" >
         <section id="itimghideandview" class="container-fluid  ">
-            <h1 class="text-center mb-5 ">Embedded Hardware Design</h1>
+            <h1 class="text-center mb-sm-0  mb-lg-5">Embedded Hardware Design</h1>
             <div class="d-flex justify-content-center secitsolutionimgdiv ">
                 <img class="img-fluid " src="./Embedded/central10.jpg" alt="">
             </div>
@@ -99,7 +100,7 @@
 
     <div id="Embedded_Soft">
         <section id="itimghideandview" class="container-fluid bg-light  ">
-            <h1 class="text-center mb-5 ">Embedded Software Development</h1>
+            <h1 class="text-center  mb-sm-0  mb-lg-5">Embedded Software Development</h1>
             <div class="d-flex justify-content-center secitsolutionimgdiv ">
                 <img class="img-fluid " src="./Embedded/embedded software developer (1).jpg" alt="">
             </div>
@@ -126,7 +127,7 @@
 
     <div id="Iot_Firm">
         <section id="itimghideandview" class="container-fluid  ">
-            <h1 class="text-center mb-5 ">IOT FIRMWARE DEVELOPMENT</h1>
+            <h1 class="text-center  mb-sm-0  mb-lg-5">IOT FIRMWARE DEVELOPMENT</h1>
             <div class="d-flex justify-content-center secitsolutionimgdiv ">
                 <img class="img-fluid " src="./Embedded/embedded firmware design.jpg" alt="">
             </div>
@@ -156,7 +157,7 @@
 
     <div id="Pcb_Ser">
         <section id="itimghideandview" class="container-fluid  mb-5 bg-light ">
-            <h1 class="text-center mb-5 ">PCB Design Services</h1>
+            <h1 class="text-center mb-sm-0  mb-lg-5">PCB Design Services</h1>
             <div class="d-flex justify-content-center secitsolutionimgdiv ">
                 <img class="img-fluid " src="./Diagram/GERBER2 (1).png" alt="">
             </div>
