--- a/ITService.html
+++ b/ITService.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
         integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-
+        <link rel="icon" type="image/x-icon" href="./Hero/logo-removebg-preview.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
@@ -27,7 +27,7 @@
 
             <div class="flex-grow-1">
                 <a class="navbar-brand" href="./index.html">
-                    <img src="./Hero/logo-removebg-preview.png" width="50px" alt="">
+                    <!-- <img src="./Hero/logo-removebg-preview.png" width="50px" alt=""> -->
                     <img src="./Hero/ENNOVAlogo.png" width="130px"></a>
             </div>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -57,13 +57,14 @@
                     <li class="nav-item">
                         <a class="nav-link" href="./Contact.html">Contact Us</a>
                     </li>
-                    <li><a href="tel:+917972911543" class="fw-bold m-1 btn btn-primary text-light">Call Now</a></li>
+                    <li><a href="tel:+917972911543" class="fw-bold m-1 btn btn-primary text-light callnowbtn">Call Now</a></li>
+                    <li><a href="tel:+917972911543" class="fw-bold m-1 btn btn-primary text-light getaquotebtn">Get A Quote</a></li>
                 </ul>
             </div>
         </div>
     </nav>
-
-    <h1 class="text-center upmallpage">SERVICES</h1>
+   
+    <h1 class="text-center mt-4  pt-5 ">SERVICES</h1>
     <section id="itimghideandview" class="container-fluid   ">
         
         <div class="row ">
@@ -90,7 +91,7 @@
                             <li><i class="fa-solid fa-caret-right"></i><a href="./IT.html#Data_inte">DATA INTEGRATION</a></li>
 
                         </ul>
-                        <a href="./IT.html"><button type="button" class="btn btn-secondary">MORE INFO</button></a>
+                        <a href="./IT.html"><button type="button" class="btn btn-secondary">MORE INFO >></button></a>
                     </div>
                     <div class="  col-md-6">
                         <img class="img-fluid "
@@ -137,7 +138,7 @@
                             <li><i class="fa-solid fa-caret-right"></i><a href="./Embedded.html#Iot_Firm">IoT Firmware Development</a></li>
                             <li><i class="fa-solid fa-caret-right"></i><a href="./Embedded.html#Pcb_Ser">PCB Design Services</a></li>
                         </ul>
-                        <a href="./Embedded.html"><button type="button" class="btn btn-secondary">MORE INFO</button></a>
+                        <a href="./Embedded.html"><button type="button" class="btn btn-secondary">MORE INFO >></button></a>
                     </div>
                     <div class="  col-md-6">
                         <img class="img-fluid "
@@ -183,7 +184,7 @@
                             <li><i class="fa-solid fa-caret-right"></i><a href="./Electrical.html#Design&_M">Design & Manufacturing of Panels (PCC, MCC, VFD)</a></li>
                             <li><i class="fa-solid fa-caret-right"></i><a href="./Electrical.html#Design_PLC">Design PLC Panels</a></li>
                         </ul>
-                        <a href="./Electrical.html"><button type="button" class="btn btn-secondary">MORE INFO</button></a>
+                        <a href="./Electrical.html"><button type="button" class="btn btn-secondary">MORE INFO >></button></a>
                     </div>
                     <div class="  col-md-6">
                         <img class="img-fluid "
@@ -211,7 +212,7 @@
             <!-- <div class="col-md-1"></div> -->
             <div class="col-md-12 col-lg-4">
                 <a href="./index.html"><img src="./Hero/ENNOVAlogo.png" class="contactimgeno" alt=""></a>
-                <p>At Ennova Technology, we specialize in creating innovative solutions for businesses. From designing electronics to developing websites, software and application. we offer a wide range of services to help businesses succeed. We also provide cutting-edge IoT solutions for industrial automation, making processes more efficient and effective. Our goal is to use technology to solve problems and drive growth for our clients.</p>
+                <p>At Ennova Technology, we specialize in creating innovative solutions for businesses. From designing electronics to developing websites, software and application. We offer a wide range of services to help businesses succeed. We also provide cutting-edge IoT solutions for industrial automation, making processes more efficient and effective. Our goal is to use technology to solve problems and drive growth for our clients.</p>
             </div>
             <!-- <div class="col-md-1"></div> -->
             <div class="  col-lg-1"></div>
