--- a/firstcv.html
+++ b/firstcv.html
@@ -11,7 +11,7 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-
+        <link rel="icon" type="image/x-icon" href="./Hero/logo-removebg-preview.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
         integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -26,7 +26,7 @@
 
             <div class="flex-grow-1">
                 <a class="navbar-brand" href="./index.html">
-                    <img src="./Hero/logo-removebg-preview.png" width="50px" alt="">
+                    <!-- <img src="./Hero/logo-removebg-preview.png" width="50px" alt=""> -->
                     <img src="./Hero/ENNOVAlogo.png" width="130px"></a>
             </div>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -56,7 +56,8 @@
                     <li class="nav-item">
                         <a class="nav-link" href="./Contact.html">Contact Us</a>
                     </li>
-                    <li><a href="tel:+917972911543" class="fw-bold m-1 btn btn-primary text-light">Call Now</a></li>
+                    <li><a href="tel:+917972911543" class="fw-bold m-1 btn btn-primary text-light callnowbtn">Call Now</a></li>
+                    <li><a href="tel:+917972911543" class="fw-bold m-1 btn btn-primary text-light getaquotebtn">Get A Quote</a></li>
                 </ul>
             </div>
         </div>
@@ -125,7 +126,7 @@
                     diverse needs of your applications. Our Relay Card is a cutting-edge solution designed to enhance
                     control and automation in various applications. Engineered with precision
                     and versatility, this relay card provides seamless integration, optimal
-                    performance and reliability for your electrical.</p>
+                    performance and reliability for your electrical System.</p>
                 <button type="button" class="btn btn-secondary">Get A Quote</button>
 
             </div>
@@ -135,9 +136,9 @@
 
     <section id="relaykeyfesp">
         <div class="container ">
-            <h3 class="fw-bold text-primary">KEY FEATURES</h3>
+            <h3 class="fw-bold text-primary  mb-2">KEY FEATURES</h3>
             <ul>
-                <li><span>Multi Voltage Compatibility:</span> Designed for 12VDC applications, offering
+                <li><span>Multi Voltage Compatibility:</span> Designed for 24VDC applications, offering
                     versatile compatibility.</li>
                 <li><span>Configurable Channels:</span> Available in 2, 4, 6 and 8 channels, allowing precise control
                     over
@@ -152,10 +153,10 @@
             </ul>
         </div>
         <div class="container ">
-            <h3 class="fw-bold text-primary">SPECIFICATION</h3>
+            <h3 class="fw-bold text-primary  mb-2">SPECIFICATION</h3>
             <ul>
                 <li><span>Relay Type:</span> Omron G2RL-1</li>
-                <li><span>Contact Configuration:</span> NO/NC selectable for each channel</li>
+                <li><span>Contact Configuration:</span> NO/NC select table for each channel</li>
                 <li><span>Isolation:</span> Optically isolated control inputs</li>
                 <li><span>Color:</span> Green</li>
                 <li><span>LED Indicators:</span> Yes (LED for each channel)</li>
@@ -166,7 +167,7 @@
             </ul>
         </div>
         <div class="container ">
-            <h3 class="fw-bold text-primary">APPLICATION</h3>
+            <h3 class="fw-bold text-primary  mb-2">APPLICATION</h3>
             <ul>
                 <li>Industrial Automation and Control Systems</li>
                 <li>Power Distribution Panels</li>
@@ -302,7 +303,7 @@
                     DATASHEET</a>
             </div>
             <div class="vn-red">
-                <a href="#">RELAY CARD USER MANUAL</a>
+                <a href="./data_pdf/RELAY CARD USER MANUAL.pdf" target="_blank">RELAY CARD USER MANUAL</a>
             </div>
         </div>
     </section>
