--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
         integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-
+        <link rel="icon" type="image/x-icon" href="./Hero/logo-removebg-preview.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
@@ -26,7 +26,7 @@
 
             <div class="flex-grow-1">
                 <a class="navbar-brand" href="./index.html">
-                    <img src="./Hero/logo-removebg-preview.png" width="50px" alt="">
+                    <!-- <img class="margin-right-" src="./Hero/logo-removebg-preview.png" width="50px" alt=""> -->
                     <img src="./Hero/ENNOVAlogo.png" width="130px"></a>
             </div>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -56,7 +56,8 @@
                     <li class="nav-item">
                         <a class="nav-link" href="./Contact.html">Contact Us</a>
                     </li>
-                    <li><a href="tel:+917972911543" class="fw-bold m-1 btn btn-primary text-light">Call Now</a></li>
+                    <li><a href="tel:+917972911543" class="fw-bold m-1 btn btn-primary text-light callnowbtn">Call Now</a></li>
+                    <li><a href="tel:+917972911543" class="fw-bold m-1 btn btn-primary text-light getaquotebtn">Get A Quote</a></li>
                 </ul>
             </div>
         </div>
@@ -96,8 +97,8 @@
 
                     <img src="./Hero/projects.jpg" alt="">
                     <div class="carousel-caption">
-                        <h1 class="animated fadeInRight">UP Coming Projects</h1>
-                        <h5 class="animated fadeInRight">"Stay Tuned for Excellence: A Preview of Our Next Milestone."
+                        <h1 class="animated fadeInRight">Up Coming Projects</h1>
+                        <h5 class="animated fadeInRight">"Stay Tuned for Excellence : A Preview of Our Next Milestone."
                         </h5>
                         <a href="./Nproduct.html#upcommingdiv"><button id="scrolbtn" class="">Learn More</button></a>
                     </div>
@@ -109,7 +110,7 @@
                     <img src="./Hero/IT background.jpg" alt="">
                     <div class="carousel-caption">
                         <h1 class="animated fadeInRight">IT Solutions</h1>
-                        <h5 class="animated fadeInRight">"Building Tomorrow's Excellence - Web Design, Software
+                        <h5 class="animated fadeInRight">"Building Tomorrow's Excellence : Web Design, Software
                             Development and Data Analytics Initiatives."</h5>
                         <a href="./IT.html"> <button id="scrolbtn" class="">Learn More</button></a>
                     </div>
@@ -299,7 +300,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-5 margin-md-60">
-                    <h2 class="left-title">Our Company Facts.</h2>
+                    <h2 class="left-title">Our Company Facts</h2>
                     <p class="white">We are the responsible, flexible and responsive organisation of hard working team members.</p>
                 </div>
                 <div class="col-lg-7 mt-lg-0 mt-5">
@@ -343,7 +344,7 @@
             <!-- <div class="col-md-1"></div> -->
             <div class="col-md-12 col-lg-4">
                 <a href="./index.html"><img src="./Hero/ENNOVAlogo.png" class="contactimgeno" alt=""></a>
-                <p>At Ennova Technology, we specialize in creating innovative solutions for businesses. From designing electronics to developing websites, software and applications. we offer a wide range of services to help businesses succeed. We also provide cutting-edge IoT solutions for industrial automation, making processes more efficient and effective. Our goal is to use technology to solve problems and drive growth for our clients.</p>
+                <p>At Ennova Technology, we specialize in creating innovative solutions for businesses. From designing electronics to developing websites, software and applications. We offer a wide range of services to help businesses succeed. We also provide cutting-edge IoT solutions for industrial automation, making processes more efficient and effective. Our goal is to use technology to solve problems and drive growth for our clients.</p>
             </div>
             <!-- <div class="col-md-1"></div> -->
             <div class="  col-lg-1"></div>
