--- a/relay.html
+++ b/relay.html
@@ -11,7 +11,7 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-
+        <link rel="icon" type="image/x-icon" href="./Hero/logo-removebg-preview.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
         integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -25,7 +25,7 @@
 
             <div class="flex-grow-1">
                 <a class="navbar-brand" href="./index.html">
-                    <img src="./Hero/logo-removebg-preview.png" width="50px" alt="">
+                    <!-- <img src="./Hero/logo-removebg-preview.png" width="50px" alt=""> -->
                     <img src="./Hero/ENNOVAlogo.png" width="130px"></a>
             </div>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -55,7 +55,8 @@
                     <li class="nav-item">
                         <a class="nav-link" href="./Contact.html">Contact Us</a>
                     </li>
-                    <li><a href="tel:+917972911543" class="fw-bold m-1 btn btn-primary text-light">Call Now</a></li>
+                    <li><a href="tel:+917972911543" class="fw-bold m-1 btn btn-primary text-light callnowbtn">Call Now</a></li>
+                    <li><a href="tel:+917972911543" class="fw-bold m-1 btn btn-primary text-light getaquotebtn">Get A Quote</a></li>
                 </ul>
             </div>
         </div>
@@ -140,7 +141,7 @@
 
 <section id="relaykeyfesp">
     <div class="container ">
-        <h3 class="fw-bold text-primary">KEY FEATURES</h3>
+        <h3 class="fw-bold text-primary mb-2">KEY FEATURES</h3>
         <ul>
             <li><span>Multi Voltage Compatibility:</span> Designed for 24VDC, 12VDC, 230VAC applications, offering
                 versatile compatibility</li>
@@ -155,7 +156,7 @@
         </ul>
     </div>
     <div class="container ">
-        <h3 class="fw-bold text-primary">SPECIFICATION</h3>
+        <h3 class="fw-bold text-primary  mb-2">SPECIFICATION</h3>
         <ul>
             <li><span>Relay Type:</span> Omron G2RL-1</li>
             <li><span>Contact Configuration:</span> NO/NC selectable for eachchannel</li>
@@ -170,7 +171,7 @@
         </ul>
     </div>
     <div class="container ">
-        <h3 class="fw-bold text-primary">APPLICATION</h3>
+        <h3 class="fw-bold text-primary  mb-2">APPLICATION</h3>
         <ul>
             <li>Industrial Automation and Control Systems</li>
             <li>Power Distribution Panels</li>
@@ -216,7 +217,7 @@
                 </tr>
                 <tr>
                     <td>2</td>
-                    <td>12VDC 1CO 4CH RELAY CARD</td>
+                    <td>12VDC 1 CO 4CH RELAY CARD</td>
                     <td>ET-RLC-12V-4CH-1CO</td>
                     <td>12V</td>
                     <td>4</td>
@@ -224,7 +225,7 @@
                 </tr>
                 <tr>
                     <td>3</td>
-                    <td>12VDC 1CO 6CH RELAY CARD</td>
+                    <td>12VDC 1 CO 6CH RELAY CARD</td>
                     <td>ET-RLC-12V-6CH-1CO</td>
                     <td>12V</td>
                     <td>6</td>
@@ -232,7 +233,7 @@
                 </tr>
                 <tr>
                     <td>4</td>
-                    <td>12VDC 1CO 8CH RELAY CARD</td>
+                    <td>12VDC 1 CO 8CH RELAY CARD</td>
                     <td>ET-RLC-12V-8CH-1CO</td>
                     <td>12V</td>
                     <td>8</td>
@@ -248,7 +249,7 @@
                 </tr>
                 <tr>
                     <td>6</td>
-                    <td>12VDC 2 Co 4CH RELAY CARD</td>
+                    <td>12VDC 2 CO 4CH RELAY CARD</td>
                     <td>ET-RLC-12V-4CH-2CO</td>
                     <td>12V</td>
                     <td>4</td>
@@ -412,7 +413,7 @@
             <a href="./data_pdf/ENNOVA TECHNOLOGY RELAY CARDS BROUCHURE (1).pdf" target="_blank">RELAY CARD DATASHEET</a>
         </div>
         <div class="vn-red">
-            <a href="#">RELAY CARD USER MANUAL</a>
+            <a href="./data_pdf/RELAY CARD USER MANUAL.pdf" target="_blank">RELAY CARD USER MANUAL</a>
         </div>
     </div>
 </section>
@@ -425,7 +426,7 @@
         <!-- <div class="col-md-1"></div> -->
         <div class="col-md-12 col-lg-4">
             <a href="./index.html"><img src="./Hero/ENNOVAlogo.png" class="contactimgeno" alt=""></a>
-            <p>At Ennova Technology, we specialize in creating innovative solutions for businesses. From designing electronics to developing websites, software and application. we offer a wide range of services to help businesses succeed. We also provide cutting-edge IoT solutions for industrial automation, making processes more efficient and effective. Our goal is to use technology to solve problems and drive growth for our clients.</p>
+            <p>At Ennova Technology, we specialize in creating innovative solutions for businesses. From designing electronics to developing websites, software and application. We offer a wide range of services to help businesses succeed. We also provide cutting-edge IoT solutions for industrial automation, making processes more efficient and effective. Our goal is to use technology to solve problems and drive growth for our clients.</p>
         </div>
         <!-- <div class="col-md-1"></div> -->
         <div class="  col-lg-1"></div>
