--- a/thirdcv.html
+++ b/thirdcv.html
@@ -11,7 +11,7 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-
+        <link rel="icon" type="image/x-icon" href="./Hero/logo-removebg-preview.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
         integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -26,7 +26,7 @@
 
             <div class="flex-grow-1">
                 <a class="navbar-brand" href="./index.html">
-                    <img src="./Hero/logo-removebg-preview.png" width="50px" alt="">
+                    <!-- <img src="./Hero/logo-removebg-preview.png" width="50px" alt=""> -->
                     <img src="./Hero/ENNOVAlogo.png" width="130px"></a>
             </div>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -56,7 +56,8 @@
                     <li class="nav-item">
                         <a class="nav-link" href="./Contact.html">Contact Us</a>
                     </li>
-                    <li><a href="tel:+917972911543" class="fw-bold m-1 btn btn-primary text-light">Call Now</a></li>
+                    <li><a href="tel:+917972911543" class="fw-bold m-1 btn btn-primary text-light callnowbtn">Call Now</a></li>
+                    <li><a href="tel:+917972911543" class="fw-bold m-1 btn btn-primary text-light getaquotebtn">Get A Quote</a></li>
                 </ul>
             </div>
         </div>
@@ -129,35 +130,32 @@
                     diverse needs of your applications. Our Relay Card is a cutting-edge solution designed to enhance
                     control and automation in various applications.Engineered with precision
                     and versatility,this relay card provides seamless integration,optimal
-                    performance and reliability for your electrical Sysrem.</p>
-                <button type="button" class="btn btn-secondary">Get A Quote</button>
+                    performance and reliability for your electrical System.<p>
+                <button type="button" class="btn btn-secondary mb-2">Get A Quote</button>
             </div>
             <div class="col-lg-1"></div>
         </div>
     </section>
     <section id="relaykeyfesp">
         <div class="container ">
-            <h3 class="fw-bold text-primary">KEY FEATURES</h3>
+            <h3 class="fw-bold text-primary mb-2">KEY FEATURES</h3>
             <ul>
                 <li><span>Multi Voltage Compatibility:</span> Designed for 230V AC Relay Card applications, offering
-                    versatile compatibility</li>
+                    versatile compatibility.</li>
                 <li><span>Configurable Channels:</span> Available in 2, 4, 6 and 8 channels, allowing precise control
-                    over
-                    multipleelectrical circuits.</li>
+                    over multipleelectrical circuits.</li>
                 <li><span>Relay Contact Configuration:</span> Options include1CO-SPDT and 2CO-DPDT, providing
-                    flexibility
-                    for
-                    diverse circuit connections.</li>
+                    flexibility for diverse circuit connections.</li>
                 <li><span>Status Indication:</span> Green LED</li>
                 <li><span>Compact Design:</span> Space-efficient and suitable for
                     DIN rail mounting.</li>
             </ul>
         </div>
         <div class="container ">
-            <h3 class="fw-bold text-primary">SPECIFICATION</h3>
+            <h3 class="fw-bold text-primary mb-2">SPECIFICATION</h3>
             <ul>
-                <li><span>Relay Type:</span> LeoneL2R-1C-230VAC</li>
-                <li><span>Contact Configuration:</span> NO/NC selectable for eachchannel</li>
+                <li><span>Relay Type:</span> Leone L2R-1C-230VAC</li>
+                <li><span>Contact Configuration:</span> NO/NC select table for each channel</li>
                 <li><span>Isolation:</span> Optically isolated control inputs</li>
                 <li><span>Color:</span> Green</li>
                 <li><span>LED Indicators:</span> Yes (LED for each channel)</li>
@@ -169,7 +167,7 @@
             </ul>
         </div>
         <div class="container ">
-            <h3 class="fw-bold text-primary">APPLICATION</h3>
+            <h3 class="fw-bold text-primary mb-2">APPLICATION</h3>
             <ul>
                 <li>Industrial Automation and Control Systems</li>
                 <li>Power Distribution Panels</li>
@@ -203,7 +201,7 @@
                 <tbody>
                     <tr>
                         <td>1</td>
-                        <td>230VAC 1C0 2CH RELAY CARD</td>
+                        <td>230VAC 1 CO 2CH RELAY CARD</td>
                         <td>ET-RLC-230V-2CH-1CO</td>
                         <td>230V</td>
                         <td>2</td>
@@ -211,7 +209,7 @@
                     </tr>
                     <tr>
                         <td>2</td>
-                        <td>230VAC 100 4CH RELAY CARD</td>
+                        <td>230VAC 1 CO 4CH RELAY CARD</td>
                         <td>ET-RLC-230V-4CH-1CO</td>
                         <td>230V</td>
                         <td>4</td>
@@ -219,7 +217,7 @@
                     </tr>
                     <tr>
                         <td>3</td>
-                        <td>230VAC 1C0 6CH RELAY CARD</td>
+                        <td>230VAC 1 CO 6CH RELAY CARD</td>
                         <td>ET-RLC-230V-6CH-1CO</td>
                         <td>230V</td>
                         <td>6</td>
@@ -227,7 +225,7 @@
                     </tr>
                     <tr>
                         <td>4</td>
-                        <td>230VAC 100 8CH RELAY CARD</td>
+                        <td>230VAC 1 C 8CH RELAY CARD</td>
                         <td>ET-RLC-230V-8CH-1CO</td>
                         <td>230V</td>
                         <td>8</td>
@@ -250,7 +248,7 @@
         </div>
         <div class="col-lg-5 partinfoimg">
             <h4 class="fw-bold ">Schematic:</h4>
-            <img class="img-fluid " src="./Relaythird/DROWDIAGRAM.jpeg" alt="">
+            <img class="img-fluid " src="./Relaythird/DROWDIAGRAM230.png" alt="">
         </div>
     </section>
 
@@ -268,7 +266,7 @@
                     DATASHEET</a>
             </div>
             <div class="vn-red">
-                <a href="#">RELAY CARD USER MANUAL</a>
+                <a href="./data_pdf/RELAY CARD USER MANUAL.pdf" target="_blank">RELAY CARD USER MANUAL</a>
             </div>
         </div>
     </section>
@@ -280,7 +278,7 @@
             <!-- <div class="col-md-1"></div> -->
             <div class="col-md-12 col-lg-4">
                 <a href="./index.html"><img src="./Hero/ENNOVAlogo.png" class="contactimgeno" alt=""></a>
-                <p>At Ennova Technology, we specialize in creating innovative solutions for businesses. From designing electronics to developing websites, software and application. we offer a wide range of services to help businesses succeed. We also provide cutting-edge IoT solutions for industrial automation, making processes more efficient and effective. Our goal is to use technology to solve problems and drive growth for our clients.</p>
+                <p>At Ennova Technology, we specialize in creating innovative solutions for businesses. From designing electronics to developing websites, software and application. We offer a wide range of services to help businesses succeed. We also provide cutting-edge IoT solutions for industrial automation, making processes more efficient and effective. Our goal is to use technology to solve problems and drive growth for our clients.</p>
             </div>
             <!-- <div class="col-md-1"></div> -->
             <div class="  col-lg-1"></div>
